2006-06-19  Vino Fernando Crescini  <jcrescin@scm.uws.edu.au>

	* samples/test-01.vla :
	* samples/test-01.vlp :
	* samples/test-02.vla :
	* samples/test-02.vlp :
	* samples/test-03.vla :
	* samples/test-03.vlp :
	* samples/test-04.vla :
	* samples/test-04.vlp :
	* samples/test-05.vla :
	* samples/test-05.vlp :
	* samples/test-06.vla :
	* samples/test-06.vlp :
	* samples/test-07.vla :
	* samples/test-07.vlp :
	* samples/test-08.vla :
	* samples/test-08.vlp :
	* samples/test-09.vla :
	* samples/test-09.vlp :
	* samples/test-10.vla :
	* samples/test-10.vlp :
	* samples/test-11.vla :
	* samples/test-11.vlp :
	* samples/test-12.vla :
	* samples/test-12.vlp :
	* samples/test-13.vla :
	* samples/test-13.vlp :

	  - Added test files.

2006-01-11  Vino Fernando Crescini  <jcrescin@scm.uws.edu.au>

	* Tagging vlad-1_4_2

	* Makefile.in :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/atom.h :
	* lib/config.h.in :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/identifier.cpp :
	* lib/identifier.h :
	* lib/list.cpp :
	* lib/list.h :
	* lib/mapper.cpp :
	* lib/mapper.h :
	* lib/mem.cpp :
	* lib/mem.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/stringlistlist.cpp :
	* lib/stringlistlist.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :
	* lib/varlist.cpp :
	* lib/varlist.h :
	* lib/vlad.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :
	* main/Makefile.in :
	* main/agent.l :
	* main/agent.y :
	* main/parser.h :
	* main/policy.l :
	* main/policy.y :
	* main/vlad.cpp :

	  - Added 2006 to copyright notices.

	* lib/mapper.cpp :
	* lib/mapper.h :

	  - compute_subst() was mistakenly declared to accept unsigned char
	    instead of unsigned int.

	* lib/polbase.cpp :
